--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "CLI wrapper around OpenAI Responses API with GPT-5 Pro and GPT-5.1 high reasoning modes.",
   "type": "module",
-  "main": "dist/bin/oracle.js",
+  "main": "dist/bin/oracle-cli.js",
   "bin": {
-    "oracle": "./dist/bin/oracle.js"
+    "oracle": "./dist/bin/oracle-cli.js"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
