--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.22.0",
     "chalk": "^5.6.2",
+    "chrome-cookies-secure": "3.0.0",
     "chrome-launcher": "^1.2.1",
     "chrome-remote-interface": "^0.33.3",
     "commander": "^14.0.2",
