feat: add anthropic models and tooling

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "homepage": "https://github.com/steipete/oracle#readme",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.70.0",
+    "@anthropic-ai/tokenizer": "^0.0.4",
     "@google/genai": "^1.30.0",
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.22.0",
