--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@vitest/coverage-v8": "4.0.9",
     "devtools-protocol": "^0.0.1545402",
     "es-toolkit": "^1.42.0",
+    "esbuild": "^0.27.0",
     "puppeteer-core": "^24.30.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
